err/tdda.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tdda'...
Listing './lib/python3.5/site-packages/tdda/constraints'...
Listing './lib/python3.5/site-packages/tdda/constraints/db'...
Listing './lib/python3.5/site-packages/tdda/constraints/examples'...
Listing './lib/python3.5/site-packages/tdda/constraints/examples/testdata'...
Listing './lib/python3.5/site-packages/tdda/constraints/pd'...
Listing './lib/python3.5/site-packages/tdda/constraints/testdata'...
Listing './lib/python3.5/site-packages/tdda/referencetest'...
Listing './lib/python3.5/site-packages/tdda/referencetest/examples'...
Listing './lib/python3.5/site-packages/tdda/referencetest/examples/pytest'...
Listing './lib/python3.5/site-packages/tdda/referencetest/examples/reference'...
Listing './lib/python3.5/site-packages/tdda/referencetest/examples/unittest'...
Listing './lib/python3.5/site-packages/tdda/referencetest/tests'...
Listing './lib/python3.5/site-packages/tdda/referencetest/tests/testdata'...
Listing './lib/python3.5/site-packages/tdda/rexpy'...
Listing './lib/python3.5/site-packages/tdda/rexpy/examples'...
Compiling './lib/python3.5/site-packages/tdda/rexpy/testseq.py'...
***   File "./lib/python3.5/site-packages/tdda/rexpy/testseq.py", line 27
    print sequences
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tdda-0.4.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
